# AutoSplitLeveler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_log.txt  build_log_4.txt  build_log_verbose.txt  process_audio.py  raw_build_log.txt
.github/workflows/: build_mac.yml
AutoSplitLeveler_Windows/AutoSplitLeveler.vst3/Contents/x86_64-win/: AutoSplitLeveler.vst3
source/: levelingengine.cpp  levelingengine.h  loudnessanalyzer.cpp  loudnessanalyzer.h  silencedetector.cpp  silencedetector.h  zerocrossing.cpp  zerocrossing.h
source/ARA/: ARATestAudioSource.h  ARATestDocumentController.cpp  ARATestPlaybackRenderer.cpp  ARATestPlaybackRenderer.h  AutoSplitLevelerAlgorithm.cpp  AutoSplitLevelerAlgorithm.h  TestAnalysis.cpp  TestAnalysis.h  TestPlugInConfig.h
source/ARA/VST3/: ARATestMainFactory.h  TestVST3Controller.cpp  TestVST3Controller.h  TestVST3Entry.cpp  TestVST3Processor.cpp  TestVST3Processor.h  autosplitleveler.uidesc
